Uisng multiple css | Add button, select, input component

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cracking English Everyday App</title>
+  <link rel="manifest" href="public/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  <style>
+     body {
+     /*  width: 420px; */
+      font-family: 'Quicksand', sans-serif;
+      background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+      background-repeat: no-repeat;
+     }
+  </style>
 </head>
 <body>
   <div id="output"></div>
