--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cracking English Everyday App</title>
+  <link rel="shortcut icon" href="crackingApp.ico" />
+  <link rel="icon" href="crackingApp.ico" type="image/ico" />
   <link rel="manifest" href="public/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
